--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -6,7 +6,7 @@
 <body>
     <h1>Public Transit Fleet Management System</h1>
     <h2>Login</h2>
-    <form action="login" method="post">
+    <form action="vehicle" method="post">
         <input type="hidden" name="action" value="login">
         Email: <input type="email" name="email" required><br>
         Password: <input type="password" name="password" required><br>
